--- a/assets/signin.css
+++ b/assets/signin.css
@@ -1,33 +1,24 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+    display: flex;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #333333;
 }
 
 .form-signin {
-  max-width: 330px;
-  padding: 15px;
+    max-width: 24em;
+    padding: 2em;
+    background-color: crimson;
+    border-radius: 1em;
+    box-shadow: 0px 4px 10px #1b1b1b;
 }
 
 .form-signin .form-floating:focus-within {
-  z-index: 2;
-}
-
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+    z-index: 2;
 }
