--- a/assets/index.css
+++ b/assets/index.css
@@ -108,11 +108,10 @@
 }
 
 #all-list {
-    display: inline-flex;
+    display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
 }
 
 .card-box {
